2010-08-02 Chris Morley

	* src/descriptors/filters.cpp: add new formula descriptor

	* src/transform.cpp: remove --addformula, use --append formula
	  Make -s option do nothing if parameter is empty.
	
	* src/obmolecformat.cpp: add --addindex

	* src/parsmart.cpp:add onceOnly to SMARTS error

2010-08-02 Chris Morley
	
	* include/openbabel/obconversion.h,include/openbabel/op.h,
	include/openbabel/plugin.h,src/plugin.cpp,src/obconversion.cpp:
	added some extra documentation on the OBPlugin concept and options
	as suggested by Hans deWinter
	
	* doc/examples/obfingerprint_getfingerprint.cpp: added an
	example file
	
	I haven't got doxygen working yet on my computer (do we really need
	latex?)	so the formatting of the above may need attention.

2010-08-01 Chris Morley
	
	* data/svgformat.script: make zoom work with Chrome

	* src/formats/svgformat.cpp: Make using internal color data the
	default.
	Use "sans-serif" as the font. Improves appearance in Opera.

2010-07-30 Chris Morley

	* tools/obabel.cpp, tools/babel.cpp: allow e.g. '-L formats cml'
	in addition to '-L cml' to handle cases where the same name is used
	for two plugins	of different types.
	 
	* src/GUI/OBGUI.cpp: now menu always returns details of plugin of
	the correct type.

2010-07-30  Noel O'Boyle

	* CMakeLists.txt, src/CMakeLists.txt: Add test for libdl. Now compiles
	under FreeBSD (and hopefully the others too). Thanks to Florian Nigsch
	for a build machine.

2010-07-30  Noel O'Boyle

	* scripts/openbabel-python.i: Revert of r3914 (presumably it was a
	mistake to include this file in the commit)

2010-07-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Add detection for single-character
	"bracket" elements, e.g., [n] for a fall-back. Fixes one failure
	from sdfcansmi unit test.

	* include/openbabel/chargemodel.h: Improved documentation, added
	method to retrieve dipole moment (with scaling).

	* src/charges/*: Add scaling factors calculated from regression