@@ -67,8 +67,9 @@ public:
       "    e.g. atom color read from cml or generated by internal code\n"
       " b black background\n"
       "    The default is white. The atom colors work with both.\n"
-      " C do not draw terminal carbon atoms explicitly\n"
-      "    The default is to draw all hetero atoms and terminal C explicitly.\n"
+      " C do not draw terminal C (and attached H) explicitly\n"
+      "    The default is to draw all hetero atoms and terminal C explicitly,\n"
+      "    together with their attched hydrogens.\n"
       " a draw all carbon atoms\n"
       "    So propane would display as H3C-CH2-CH3\n"
       " d do not display molecule name\n"
@@ -147,6 +148,8 @@ bool SVGFormat::WriteChemObject(OBConversion* pConv)
   //When there are no more they are sent to WriteMolecule.
   //This allows their number to be determined whatever their source
   //(they may also have been filtered), so that the table can be properly dimensioned.
+  
+  //NOT CURRENTLY IMPLEMENTED
   //If the first object is OBText, the part of it before each insertion point (if it exists)
   //is output before every molecule. This allows molecule structures to be displayed
   //in a template. The x option to omit the XML header is set
@@ -181,7 +184,9 @@ bool SVGFormat::WriteChemObject(OBConversion* pConv)
       return true;
     }
 */  
-  }   
+  }
+
+  OBMoleculeFormat::DoOutputOptions(pOb, pConv);
 
   //save molecule
   _objects.push_back(pOb);
